--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,14 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header #api_status{
+    border-radius: 50%;
+    background-color: #cccccc;
+    height: 40px;
+    margin-right: 20px;
+    width: 40px;
+    margin-top: 10px;
+}
+header #api_status.available {
+    background-color: #ff545f;
+}
